gen/VeeParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/work/Vee\Vee.g4 by ANTLR 4.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6")]
[System.CLSCompliant(false)]
public partial class VeeParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		LBracket=1, RBracket=2, LBrace=3, RBrace=4, LParen=5, RParen=6, Comma=7, 
		Colon=8, Range=9, Arrow=10, Lambda=11, Pow=12, Multiply=13, Divide=14, 
		Modulo=15, Plus=16, Minus=17, Eq=18, Neq=19, Lt=20, Gt=21, Lte=22, Gte=23, 
		Pipe=24, RPipe=25, Dot=26, Concat=27, ComposeRight=28, ComposeLeft=29, 
		ComposeAnd=30, ComposeOr=31, Inverse=32, AndAlso=33, OrElse=34, Not=35, 
		TypeOf=36, Let=37, In=38, If=39, Is=40, When=41, Then=42, Else=43, True=44, 
		False=45, New=46, As=47, Type=48, StringType=49, NumberType=50, BooleanType=51, 
		EnumType=52, TupleType=53, RecordType=54, ListType=55, MapType=56, TaskType=57, 
		OptionType=58, UnitType=59, SomeCase=60, NoneCase=61, ResultCase=62, ErrorCase=63, 
		Number=64, Name=65, Wildcard=66, String=67, WS=68;
	public const int
		RULE_root = 0, RULE_type = 1, RULE_typeAnnotation = 2, RULE_typeName = 3, 
		RULE_expression = 4, RULE_constant = 5, RULE_nums = 6, RULE_recordPair = 7, 
		RULE_mapItems = 8, RULE_mapPair = 9, RULE_mapItemType = 10, RULE_listItems = 11, 
		RULE_member = 12, RULE_argument = 13, RULE_declarations = 14, RULE_declaration = 15, 
		RULE_extraction = 16, RULE_alias = 17, RULE_condition = 18, RULE_match = 19, 
		RULE_pattern = 20, RULE_capture = 21, RULE_keyPattern = 22, RULE_fieldPattern = 23, 
		RULE_rest = 24, RULE_lambdaParams = 25, RULE_lambdaBody = 26, RULE_operators = 27, 
		RULE_binaryOperators = 28, RULE_unaryOperators = 29;
	public static readonly string[] ruleNames = {
		"root", "type", "typeAnnotation", "typeName", "expression", "constant", 
		"nums", "recordPair", "mapItems", "mapPair", "mapItemType", "listItems", 
		"member", "argument", "declarations", "declaration", "extraction", "alias", 
		"condition", "match", "pattern", "capture", "keyPattern", "fieldPattern", 
		"rest", "lambdaParams", "lambdaBody", "operators", "binaryOperators", 
		"unaryOperators"
	};

	private static readonly string[] _LiteralNames = {
		null, "'['", "']'", "'{'", "'}'", "'('", "')'", "','", "':'", "'..'", 
		"'->'", "'\\'", "'^'", "'*'", "'/'", "'%'", "'+'", "'-'", "'='", "'!='", 
		"'<'", "'>'", "'<='", "'>='", "'|'", "'|>'", "'.'", "'::'", "'>>'", "'<<'", 
		"'&&'", "'||'", "'!'", "'and'", "'or'", "'not'", "'typeof'", "'let'", 
		"'in'", "'if'", "'is'", "'when'", "'then'", "'else'", "'true'", "'false'", 
		"'new'", "'as'", "'type'", "'string'", "'number'", "'boolean'", "'enum'", 
		"'tuple'", "'record'", "'list'", "'map'", "'task'", "'option'", "'unit'", 
		"'some'", "'none'", "'result'", "'error'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "LBracket", "RBracket", "LBrace", "RBrace", "LParen", "RParen", 
		"Comma", "Colon", "Range", "Arrow", "Lambda", "Pow", "Multiply", "Divide", 
		"Modulo", "Plus", "Minus", "Eq", "Neq", "Lt", "Gt", "Lte", "Gte", "Pipe", 
		"RPipe", "Dot", "Concat", "ComposeRight", "ComposeLeft", "ComposeAnd", 
		"ComposeOr", "Inverse", "AndAlso", "OrElse", "Not", "TypeOf", "Let", "In", 
		"If", "Is", "When", "Then", "Else", "True", "False", "New", "As", "Type", 
		"StringType", "NumberType", "BooleanType", "EnumType", "TupleType", "RecordType", 
		"ListType", "MapType", "TaskType", "OptionType", "UnitType", "SomeCase", 
		"NoneCase", "ResultCase", "ErrorCase", "Number", "Name", "Wildcard", "String", 
		"WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Vee.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	static VeeParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

	public VeeParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class RootContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(VeeParser.Eof, 0); }
		public DeclarationsContext declarations() {
			return GetRuleContext<DeclarationsContext>(0);
		}
		public ITerminalNode In() { return GetToken(VeeParser.In, 0); }
		public RootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_root; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeeVisitor<TResult> typedVisitor = visitor as IVeeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRoot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RootContext root() {
		RootContext _localctx = new RootContext(Context, State);
		EnterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Let) {
				{
				State = 60; declarations();
				State = 61; Match(In);
				}
			}

			State = 65; expression(0);
			State = 66; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
	 
		public TypeContext() { }
		public virtual void CopyFrom(TypeContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class NamedTypeContext : TypeContext {
		public ITerminalNode Name() { return GetToken(VeeParser.Name, 0); }
		public NamedTypeContext(TypeContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeeVisitor<TResult> typedVisitor = visitor as IVeeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamedType(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AliasTypeContext : TypeContext {
		public ITerminalNode Name() { return GetToken(VeeParser.Name, 0); }
		public TypeAnnotationContext typeAnnotation() {
			return GetRuleContext<TypeAnnotationContext>(0);
		}
		public AliasTypeContext(TypeContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeeVisitor<TResult> typedVisitor = visitor as IVeeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAliasType(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FunctionTypeContext : TypeContext {
		public TypeContext[] type() {
			return GetRuleContexts<TypeContext>();
		}
		public TypeContext type(int i) {
			return GetRuleContext<TypeContext>(i);
		}
		public ITerminalNode Arrow() { return GetToken(VeeParser.Arrow, 0); }
		public FunctionTypeContext(TypeContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeeVisitor<TResult> typedVisitor = visitor as IVeeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionType(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ParameterizedTypeContext : TypeContext {
		public TypeContext[] type() {
			return GetRuleContexts<TypeContext>();
		}
		public TypeContext type(int i) {
			return GetRuleContext<TypeContext>(i);
		}
		public ITerminalNode LParen() { return GetToken(VeeParser.LParen, 0); }
		public ITerminalNode RParen() { return GetToken(VeeParser.RParen, 0); }
		public ParameterizedTypeContext(TypeContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeeVisitor<TResult> typedVisitor = visitor as IVeeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParameterizedType(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BuiltinTypeContext : TypeContext {
		public TypeNameContext typeName() {
			return GetRuleContext<TypeNameContext>(0);
		}
		public BuiltinTypeContext(TypeContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeeVisitor<TResult> typedVisitor = visitor as IVeeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBuiltinType(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ProductTypeContext : TypeContext {
		public TypeContext[] type() {
			return GetRuleContexts<TypeContext>();
		}
		public TypeContext type(int i) {
			return GetRuleContext<TypeContext>(i);
		}
		public ITerminalNode Comma() { return GetToken(VeeParser.Comma, 0); }
		public ProductTypeContext(TypeContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeeVisitor<TResult> typedVisitor = visitor as IVeeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProductType(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class SumTypeContext : TypeContext {
		public TypeContext[] type() {
			return GetRuleContexts<TypeContext>();
		}
		public TypeContext type(int i) {
			return GetRuleContext<TypeContext>(i);
		}
		public ITerminalNode Pipe() { return GetToken(VeeParser.Pipe, 0); }
		public SumTypeContext(TypeContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeeVisitor<TResult> typedVisitor = visitor as IVeeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSumType(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OpenTypeContext : TypeContext {
		public ITerminalNode Wildcard() { return GetToken(VeeParser.Wildcard, 0); }
		public OpenTypeContext(TypeContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeeVisitor<TResult> typedVisitor = visitor as IVeeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOpenType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		return type(0);
	}

	private TypeContext type(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		TypeContext _localctx = new TypeContext(Context, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_type, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				_localctx = new BuiltinTypeContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 69; typeName();
				}
				break;
			case 2:
				{
				_localctx = new NamedTypeContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 70; Match(Name);
				}
				break;
			case 3:
				{
				_localctx = new OpenTypeContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 71; Match(Wildcard);
				}
				break;
			case 4:
				{
				_localctx = new AliasTypeContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 72; Match(Name);
				State = 73; typeAnnotation();
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 92;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 90;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
					case 1:
						{
						_localctx = new FunctionTypeContext(new TypeContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_type);
						State = 76;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 77; Match(Arrow);
						State = 78; type(4);
						}
						break;
					case 2:
						{
						_localctx = new ProductTypeContext(new TypeContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_type);
						State = 79;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 80; Match(Comma);
						State = 81; type(3);
						}
						break;
					case 3:
						{
						_localctx = new SumTypeContext(new TypeContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_type);
						State = 82;
						if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
						State = 83; Match(Pipe);
						State = 84; type(2);
						}
						break;
					case 4:
						{
						_localctx = new ParameterizedTypeContext(new TypeContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_type);
						State = 85;
						if (!(Precpred(Context, 4))) throw new FailedPredicateException(this, "Precpred(Context, 4)");
						State = 86; Match(LParen);
						State = 87; type(0);
						State = 88; Match(RParen);
						}
						break;
					}
					} 
				}
				State = 94;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class TypeAnnotationContext : ParserRuleContext {
		public ITerminalNode Colon() { return GetToken(VeeParser.Colon, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public TypeAnnotationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeAnnotation; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeeVisitor<TResult> typedVisitor = visitor as IVeeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeAnnotation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeAnnotationContext typeAnnotation() {
		TypeAnnotationContext _localctx = new TypeAnnotationContext(Context, State);
		EnterRule(_localctx, 4, RULE_typeAnnotation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95; Match(Colon);
			State = 96; type(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeNameContext : ParserRuleContext {
		public ITerminalNode StringType() { return GetToken(VeeParser.StringType, 0); }
		public ITerminalNode NumberType() { return GetToken(VeeParser.NumberType, 0); }
		public ITerminalNode BooleanType() { return GetToken(VeeParser.BooleanType, 0); }
		public ITerminalNode ListType() { return GetToken(VeeParser.ListType, 0); }
		public ITerminalNode MapType() { return GetToken(VeeParser.MapType, 0); }
		public ITerminalNode TupleType() { return GetToken(VeeParser.TupleType, 0); }
		public ITerminalNode RecordType() { return GetToken(VeeParser.RecordType, 0); }
		public ITerminalNode EnumType() { return GetToken(VeeParser.EnumType, 0); }
		public ITerminalNode TaskType() { return GetToken(VeeParser.TaskType, 0); }
		public ITerminalNode OptionType() { return GetToken(VeeParser.OptionType, 0); }
		public ITerminalNode UnitType() { return GetToken(VeeParser.UnitType, 0); }
		public TypeNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeName; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeeVisitor<TResult> typedVisitor = visitor as IVeeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeNameContext typeName() {
		TypeNameContext _localctx = new TypeNameContext(Context, State);
		EnterRule(_localctx, 6, RULE_typeName);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << StringType) | (1L << NumberType) | (1L << BooleanType) | (1L << EnumType) | (1L << TupleType) | (1L << RecordType) | (1L << ListType) | (1L << MapType) | (1L << TaskType) | (1L << OptionType) | (1L << UnitType))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
	 
		public ExpressionContext() { }
		public virtual void CopyFrom(ExpressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PatternMathchingContext : ExpressionContext {
		public ITerminalNode If() { return GetToken(VeeParser.If, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode Is() { return GetToken(VeeParser.Is, 0); }
		public MatchContext[] match() {
			return GetRuleContexts<MatchContext>();
		}
		public MatchContext match(int i) {
			return GetRuleContext<MatchContext>(i);
		}
		public ITerminalNode[] Pipe() { return GetTokens(VeeParser.Pipe); }
		public ITerminalNode Pipe(int i) {
			return GetToken(VeeParser.Pipe, i);
		}
		public ITerminalNode Else() { return GetToken(VeeParser.Else, 0); }
		public PatternMathchingContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeeVisitor<TResult> typedVisitor = visitor as IVeeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPatternMathching(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AccessContext : ExpressionContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode Dot() { return GetToken(VeeParser.Dot, 0); }
		public MemberContext member() {
			return GetRuleContext<MemberContext>(0);
		}
		public AccessContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeeVisitor<TResult> typedVisitor = visitor as IVeeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAccess(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ConditionalContext : ExpressionContext {
		public ITerminalNode If() { return GetToken(VeeParser.If, 0); }
		public ConditionContext[] condition() {
			return GetRuleContexts<ConditionContext>();
		}
		public ConditionContext condition(int i) {
			return GetRuleContext<ConditionContext>(i);
		}
		public ITerminalNode Else() { return GetToken(VeeParser.Else, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode[] Pipe() { return GetTokens(VeeParser.Pipe); }
		public ITerminalNode Pipe(int i) {
			return GetToken(VeeParser.Pipe, i);
		}
		public ConditionalContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeeVisitor<TResult> typedVisitor = visitor as IVeeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConditional(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UnaryContext : ExpressionContext {
		public IToken op;
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode Plus() { return GetToken(VeeParser.Plus, 0); }
		public ITerminalNode Minus() { return GetToken(VeeParser.Minus, 0); }
		public UnaryContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeeVisitor<TResult> typedVisitor = visitor as IVeeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnary(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MultiplicativeContext : ExpressionContext {
		public ExpressionContext l;
		public IToken op;
		public ExpressionContext r;
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode Multiply() { return GetToken(VeeParser.Multiply, 0); }
		public ITerminalNode Divide() { return GetToken(VeeParser.Divide, 0); }
		public ITerminalNode Modulo() { return GetToken(VeeParser.Modulo, 0); }
		public MultiplicativeContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeeVisitor<TResult> typedVisitor = visitor as IVeeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMultiplicative(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class TupleContext : ExpressionContext {
		public ITerminalNode LParen() { return GetToken(VeeParser.LParen, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
